<resources>
    <string name="app_name">玩Android哈</string>

    <string name="load_more_loading">正在加载中...</string>
    <string name="load_more_load_failed">加载失败，请点我重试</string>
    <string name="load_more_load_end">没有更多数据</string>
    <string name="title_project">项目</string>
    <string name="text_set_top">置顶</string>
    <string name="text_new">新</string>
    <string name="text_one_day_one_problem">每日一问</string>
    <string name="text_interview_guide">面试指南</string>
    <string name="text_knowledge_system">知识体系</string>
    <string name="text_web_guide">站点导航</string>
    <string name="chapter">公众号</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="search_tint">搜索文章、项目</string>
    <string name="menu_search">menu_search</string>
    <string name="menu_setting">menu_setting</string>

    <string name="network_connect_error">网络连接异常</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="no_route_to_host">无法连接到服务器</string>
    <string name="network_response_code_error">服务器状态码异常：</string>
    <string name="bad_network_view_tip">您的网络不给力，点击屏幕可重新加载</string>
    <string name="load_failed_click_to_reload">加载失败，点击可重新加载</string>
    <string name="not_login">未登录</string>
    <string name="text_login">登录</string>
    <string name="text_register_account">账号注册</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_repassword">请输入确认密码</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_coin_count">我的积分</string>
    <string name="logout">退出当前账号</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_about">关于app</string>
    <string name="text_register">注册</string>
    <string name="login_tip_title">宁还没有登录呢</string>
    <string name="text_cancel">取消</string>
    <string name="logout_tip">确定要退出当前账号吗</string>
    <string name="logout_yes">是的</string>
    <string name="logout_no">点错了</string>

</resources>
