<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/dp_80"
              android:orientation="horizontal"
>
    <TextView
            android:id="@+id/tv_entry_day_problem"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_80"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/text_one_day_one_problem"
            android:textColor="@color/white"
            android:textSize="@dimen/entry_text_size"/>
    <TextView
            android:id="@+id/tv_entry_interview_guide"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_80"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:text="@string/text_interview_guide"
            android:textColor="@color/white"
            android:textSize="@dimen/entry_text_size"/>
    <TextView
            android:id="@+id/tv_entry_knowledge_system"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_80"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/text_knowledge_system"
            android:textColor="@color/white"
            android:textSize="@dimen/entry_text_size"/>
    <TextView
            android:id="@+id/tv_entry_web_guide"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_80"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:gravity="center"
            android:text="@string/text_web_guide"
            android:textColor="@color/white"
            android:textSize="@dimen/entry_text_size"/>
</LinearLayout>