<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel" type="me.luowl.wan.ui.FindViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/app_home_title_height"
                      android:background="@color/appThemeColor"
                      android:gravity="center"
                      android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_item_wx_chapters"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:text="@string/chapter"
                    android:textColor="@color/half_white"
                    android:textSize="@dimen/text_size_16"/>
            <TextView
                    android:id="@+id/tv_item_system"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:text="@string/system"
                    android:textColor="@color/half_white"
                    android:textSize="@dimen/text_size_16"/>
            <TextView
                    android:id="@+id/tv_item_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:text="@string/navigation"
                    android:textColor="@color/half_white"
                    android:textSize="@dimen/text_size_16"/>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>
</layout>
