<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <import type="me.luowl.wan.base.adapter.LoadMoreState"/>
        <variable name="loadMoreStateModel" type="LoadMoreState"/>
    </data>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="40dp">

        <LinearLayout
                android:id="@+id/load_more_loading_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="@{loadMoreStateModel.loading?View.VISIBLE:View.GONE}">

            <ProgressBar
                    android:id="@+id/loading_progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"/>

            <TextView
                    android:id="@+id/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/load_more_loading"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>
        </LinearLayout>

        <FrameLayout
                android:id="@+id/load_more_load_fail_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{loadMoreStateModel.error?View.VISIBLE:View.GONE}">


            <TextView
                    android:id="@+id/tv_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/load_more_load_failed"/>

        </FrameLayout>

        <FrameLayout
                android:id="@+id/load_more_load_end_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{loadMoreStateModel.end?View.VISIBLE:View.GONE}">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/load_more_load_end"
                    android:textColor="@android:color/darker_gray"/>
        </FrameLayout>
    </FrameLayout>
</layout>
